fix cite copy to clipboard button in dark mode

--- a/src/components/FieldsButtons.css
+++ b/src/components/FieldsButtons.css
@@ -127,4 +127,10 @@
 
 .kgs-fields-buttons .kgs-cite-clipboard-button button {
   font-size: initial;
+  color: var(--color-19);
+}
+
+.kgs-fields-buttons .kgs-cite-clipboard-button button:hover {
+  font-size: initial;
+  color: var(--color-20);
 }
